# stats

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/endpoints/v1/: health_check.py  stats.py
app/db/: __init__.py  entities.py  main.py
app/models/: __init__.py  stats.py
app/services/: __init__.py  base.py  stats.py
k8s/: deploy.sh  upskill-app-deployment.yaml
k8s/postgres/: postgres-creds-secret.yaml  postgres-master-statefulset.yaml  postgres-replica-statefulset.yaml  postgres-service.yaml  postgres-volume-claim.yaml  postgres-volume.yaml
k8s/postgres/config/: create-configmap.sh  pg_hba.conf  postgres.conf
migrations/: env.py
migrations/versions/: 8a1867e88855_initial.py
worker/: Dockerfile  main.py  pyproject.toml
